--- a/search.html
+++ b/search.html
@@ -2,8 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css" type="text/css"/>
 		<title></title>
 	</head>
 	<body>
+		<div class="search">
+			<input type="text" placeholder="Search" />
+			<span></span>
+		</div>
 	</body>
 </html>
