--- a/share.html
+++ b/share.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<title></title>
 	</head>
+
 	<body>
+		<ul class="share">
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
 	</body>
+
 </html>
