--- a/weather.html
+++ b/weather.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		<title></title>
 	</head>
+
 	<body>
+		<section class="weather">
+
+			<span></span>
+			<ul>
+				<li><a>22°</a></li>
+				<li>GURDASPUR</li>
+			</ul>
+
+		</section>
 	</body>
+
 </html>
