--- a/info.html
+++ b/info.html
@@ -2,8 +2,54 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css" type="text/css"/>
 		<title></title>
 	</head>
 	<body>
+		<div class="info">
+			<section class="header">
+				<div class="photo">
+					<img src="psd18859/weather6bcbca.png" />
+				</div>
+				<div class="name">
+					<ul>
+						<li>HELLO EVERYONE</li>
+						<li>@sina weibo</li>
+					</ul>
+				</div>
+			</section>
+			<section class="amount">
+				<ul>
+					<li>
+						<ul>
+							<li>750</li>
+							<li>TWEETS</li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+							<li>862</li>
+							<li>FOLLOWING</li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+							<li>6756</li>
+							<li>FOLLOWERS</li>
+						</ul>
+					</li>
+				</ul>
+			</section>
+			<section class="textarea">
+				<textarea placeholder="Composs a tweet..."></textarea>
+			</section>
+			<section class="footer">
+				<ul>
+					<li></li>
+					<li></li>
+					<li><a>TWEET</a></li>
+				</ul>
+			</section>
+		</div>
 	</body>
 </html>
