--- a/item.html
+++ b/item.html
@@ -2,8 +2,23 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="css/style.css" type="text/css"/>
 		<title></title>
 	</head>
 	<body>
+		<section class="item">
+			<p>ITEM</p>
+			<div class="information">
+				<img src="psd18859/login-button.jpg" />
+				<p>系统管理员、业务管理员可查看所有渠道Id业务；渠道管理员只能查看有权限的渠道的业务。</p>
+			</div>
+			<div class="button">
+				<div><p>ORDER</p></div>
+				<ul>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+		</section>
 	</body>
 </html>
